--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
+#.jar
 *.war
 *.nar
 *.ear
@@ -22,3 +23,6 @@
 hs_err_pid*
 /target/
 /.idea/
+/.idea/libraries/
+/.idea/artifacts/
+
