added wrapper code for aws hosting code to call old scaha site code.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -207,4 +207,13 @@
     <servlet-name>SubmitGameDetails</servlet-name>
     <url-pattern>/apis/submitgamedetails/*</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>GetUsaHockey</servlet-name>
+    <servlet-class>com.scaha.apis.GetUsaHockey</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>GetUsaHockey</servlet-name>
+    <url-pattern>/apis/GetUsaHockey/*</url-pattern>
+  </servlet-mapping>
 </web-app>
