--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -216,4 +216,14 @@
     <servlet-name>GetUsaHockey</servlet-name>
     <url-pattern>/apis/GetUsaHockey/*</url-pattern>
   </servlet-mapping>
+  <filter>
+    <filter-name>IPBlockFilter</filter-name>
+    <filter-class>com.scaha.filters.IPBlockFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>IPBlockFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
