cleaning up managed rosters for new loi work flow, also added key password for gmail

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,12 +10,12 @@
   <env-entry>
     <env-entry-name>scaha/dbpoolcount</env-entry-name>
     <env-entry-type>java.lang.Integer</env-entry-type>
-    <env-entry-value>5</env-entry-value>
+    <env-entry-value>50</env-entry-value>
   </env-entry>
   <env-entry>
     <env-entry-name>scaha/emailauth</env-entry-name>
     <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>info@scaha.com:shiloh24</env-entry-value>
+    <env-entry-value>info@scaha.com:fkjg fzep rtvg jhpd</env-entry-value>
     
   </env-entry>
   <welcome-file-list>
